--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/google-maps": "^5.3.2",
     "@capacitor/share": "^5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
