--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "^5.4.1",
+    "@capacitor/core": "5.4.1",
     "@capacitor/google-maps": "^5.3.2",
     "@capacitor/share": "^5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/cli": "^7.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,6 +43,7 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/cli": "5.4.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.3.0",
