--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/share": "^5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/cli": "^6.18.0",
+    "@types/googlemaps": "^3.43.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
