--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionic-app-base",
-  "version": "0.0.0",
+  "name": "tebi-app",
+  "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -21,13 +21,22 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor/android": "^5.4.1",
-    "@capacitor/core": "5.4.1",
-    "@capacitor/google-maps": "^5.3.2",
+    "@awesome-cordova-plugins/camera": "^6.4.0",
+    "@capacitor-community/barcode-scanner": "^4.0.1",
+    "@capacitor-mlkit/barcode-scanning": "^5.2.0",
+    "@capacitor/android": "5.3.0",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.7",
+    "@capacitor/core": "^5.3.0",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "^5.3.0",
+    "@capacitor/keyboard": "5.0.6",
     "@capacitor/share": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
+    "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
-    "@ionic/cli": "^6.18.0",
-    "@types/googlemaps": "^3.43.3",
+    "@ionic/pwa-elements": "^3.2.2",
+    "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -44,9 +53,8 @@
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.4.1",
+    "@capacitor/cli": "^5.3.0",
     "@ionic/angular-toolkit": "^9.0.0",
-    "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
@@ -65,5 +73,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
-  }
+  },
+  "description": "An Ionic project"
 }
